<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2009-2018 digi.me Limited. All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideOverlay"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context="me.digi.sand.app.SurveyFragment"
        tools:ignore="MissingPrefix"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/surveyHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/survey_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="#ffff"
            fontPath="fonts/Lato-Bold.ttf"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="@dimen/main_title_text_size" />

        <TextView
            android:id="@+id/surveyDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_description"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/surveyHeader"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/Lato-Regular.ttf"
            android:gravity="center"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@color/buttonColor"
                android:textColor="#000000"
                android:textSize="22sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/surveyText"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/surveyMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/survey_question"
                android:layout_marginLeft="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="25dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/surveyDesc"
                fontPath="fonts/Lato-Regular.ttf"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:theme="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="3.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/surveyRateDesc" />

            <EditText
                android:id="@+id/surveyText"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="#ffffff"
                android:includeFontPadding="false"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:gravity="top|start"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/surveyRateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_scale"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/surveyMain"
                android:textColor="#ffff"
                android:textSize="14sp"
                fontPath="fonts/Lato-Bold.ttf"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/why"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                android:textColor="#ffff"
                android:textSize="14sp"
                fontPath="fonts/Lato-Bold.ttf"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/skipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="#ffff"
            android:textSize="20sp"
            fontPath="fonts/Lato-Bold.ttf"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/submitButton"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:clickable="true"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
